vpc_app.tf
resource "aws_vpc" "app" {
  cidr_block           = var.app_vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags                 = { Name = "app-vpc" }
}

resource "aws_subnet" "app_public" {
  count             = 2
  vpc_id            = aws_vpc.app.id
  cidr_block        = cidrsubnet(var.app_vpc_cidr, 8, count.index)
  availability_zone = element(["us-east-1a", "us-east-1b"], count.index)
}

resource "aws_subnet" "app_private" {
  count             = 2
  vpc_id            = aws_vpc.app.id
  cidr_block        = cidrsubnet(var.app_vpc_cidr, 8, count.index + 10)
  availability_zone = element(["us-east-1a", "us-east-1b"], count.index)
}
